# kingston

./: .gitignore  CMakeLists.txt  Messages.sh  extract-messages.sh
debian/: README.update-notifier-kde  changelog  control  copyright  update-notifier-kde.lintian-overrides
po/: CMakeLists.txt  de.po  es.po  fr.po  hu.po  kingston_update_notifier.pot
src/: CMakeLists.txt  kingston_update_notifier.desktop  kingston_update_notifier.notifyrc  kingston_update_notifier_module.cpp  kingston_update_notifier_module.h  listener.cpp  listener.h  notifier.cpp  notifier.h  reboot_listener.cpp  reboot_listener.h  test_window.cpp  test_window.h  testapp_main.cpp  update_listener.cpp  update_listener.h  update_worker.cpp  update_worker.h  worker.cpp  worker.h
